fix 404 align

--- a/wp-content/themes/ecosystem-energy/assets/styles/pages/_404.scss
+++ b/wp-content/themes/ecosystem-energy/assets/styles/pages/_404.scss
@@ -1,6 +1,5 @@
 .error-page {
   background-color: $blue;
-  text-align: center;
 
   .content {
     margin-top: $header-height;
